Z-index fixed

--- a/my-app/src/CSS/framework.css
+++ b/my-app/src/CSS/framework.css
@@ -1,6 +1,6 @@
 
 .title{
-  font-size: 3rem;
+  font-size: 4rem;
   z-index: 5;
 }
 .subTitle{
@@ -15,14 +15,14 @@
 
 @media only screen and (max-width:1100px){
 .title{
-    font-size: 3rem;
+    font-size: 3.5rem;
   }
 
 
 }
 @media only screen and (max-width:900px){
   .title{
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   .subTitle{
     font-size: 1.5rem;
@@ -37,7 +37,7 @@
 
 @media only screen and (max-width:600px){
   .title{
-    font-size: 1.6rem;
+    font-size: 2.5rem;
   }
   .subTitle{
     font-size: 1.5rem;
