--- a/my-app/src/components/languages.module.css
+++ b/my-app/src/components/languages.module.css
@@ -21,6 +21,7 @@
   width: 100%;
   height: 100%;
   box-shadow: inset 0px 0px 10px 6px #1f1926;
+  pointer-events: none;
 }
 .clip{
   width: 100%;
@@ -28,15 +29,17 @@
   background: var(--cor);
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .clip span{
-  font-size: 3rem;
+  font-size: 2.8rem;
   text-align: center;
-  margin: 10%;
   font-family: 'Font2';
+  margin-bottom: 5%;
 }
 .distros{
   gap: 50px;
+  margin-bottom: 10%;
   justify-content: center;
 }
 .distros img{
@@ -61,12 +64,14 @@
 @media only screen and (max-width:800px){
   .overView{
     width: 100%;
-    height: 30%;
+    height: 40%;
   }
   .clip{
+    gap:10%;
   }
   .clip span{
-    font-size: 2rem;
+    font-size: 1.8rem;
+    margin:0;
   }
   .floating{
     position: absolute;
@@ -74,6 +79,7 @@
     height: 60%;
     width: 165%;
   }
+
 }
 
 @media only screen and (max-width:400px){
